[package]
name = "alcedo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alcedo"
crate-type = ["cdylib"]

[dependencies]
miniserde = "0.1.24"
pyo3 = { version = "0.20.3", features = ["extension-module"] }
reqwest = { version = "0.11.26", features = ["json", "blocking"] }
ureq = { version = "2.9.6", features = ["json"] }
