[lib]
name = 'alcedo'
crate-type = ['cdylib']


[package]
name = 'alcedo'
version = '0.1.1'
edition = '2021'


[dependencies]
pyo3 = { version = '0.20.3', features = ['extension-module'] }
reqwest = { version = '0.11.26', features = ['json', 'blocking'] }
serde = '1.0.197'
serde_derive = '1.0.197'
serde_json = "1.0.114"
