[build-system]
build-backend = 'maturin'
requires = [ 'maturin>=0.13,<0.14' ]


[project]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Web Environment',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Operating System :: Unix',
  'Programming Language :: Rust',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Topic :: Software Development :: Libraries :: Python Modules'
]
license = {file='LICENSE'}
keywords = ['client', 'http', 'https', 'httpx', 'request', 'requests', 'reqwest']
name = 'alcedo'
requires-python = '>=3.8'
readme = 'README.md'


[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.poetry]
authors = [ 'Sitt Guruvanich <aekazitt+github@gmail.com>' ]
description = 'Oxidized and Optimistic HTTP Client for Python'
license = 'MIT'
name = 'alcedo'
version = '0.1.7'
packages = [{include='alcedo.pyi'}]


[tool.poetry.dependencies]
python = '^3.8'


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
aiohttp = '^3.9.3'
fastapi = '^0.110.0'
httpx = '^0.27.0'
maturin = '^0.13.1'
mypy = '^1.9.0'
orjson = '^3.9.15'
pytest = '^8.1.1'
pytest-asyncio = '^0.23.6'
requests = '^2.31.0'
ruff = '^0.3.3'
uvicorn = '^0.29.0'
types-requests = "^2.31.0.20240311"


[tool.pytest.ini_options]
addopts = '--durations=0'
markers = [
  'aiohttp: aiohttp benchmarks optional when running tests',
  'httpx: httpx benchmarks optional when running tests',
  'requests: requests benchmarks optional when running tests',
]
python_files = '*.py'
pythonpath = [ 'alcedo.pyi' ]
testpaths = [ 'tests' ]


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py38'
